Fix crash when closing split view with ownCloud plugin loaded

KPluginLoader::instantiatePlugins() wraps QPluginLoader::instace(),
which doesn't return a new object for each call, so if we set the
KFileItemModelRolesUpdater instance as parent to the plugin the shared
instance will be deleted leading to crashes when other instances of
KFileItemModelRolesUpdater tries to use their plugin objects.

To fix this, set the QApplication as a parent.

BUG: 357479

REVIEW: 127930